 - GB, GBA: Fix broken opposing button filter (fixes mgba.io/i/1191)
 - Qt: Fix jumbled background when paused
 - Qt: Fix FPS counter on Windows
Misc:
 - mGUI: Add SGB border configuration option
 - mGUI: Add support for different settings types
 - Wii: Define _GNU_SOURCE (fixes mgba.io/i/1106)
 - Wii: Expose stretch configuration in settings
 - Wii: Stretch now sets pixel-accurate mode size cap

0.7 beta 1: (2018-09-24)
- Initial beta for 0.7

0.6.3: (2018-04-14)
Bugfixes:
 - GB Audio: Revert unsigned audio changes
 - GB Video: Fix bad merge (fixes mgba.io/i/1040)
 - GBA Video: Fix OBJ blending regression (fixes mgba.io/i/1037)

0.6.2: (2018-04-03)
Bugfixes:
 - Core: Fix ROM patches not being unloaded when disabled (fixes mgba.io/i/962)
 - 3DS: Fix opening files in directory names with trailing slashes
 - LR35902: Fix watchpoints not reporting new value
 - GB MBC: Fix MBC2 saves (fixes mgba.io/i/954)
 - GB Memory: HDMAs should not start when LCD is off (fixes mgba.io/i/310)
 - GB Memory: Fix OAM DMA blocking regions (fixes mgba.io/i/1013)
 - GB Video: Only trigger STAT write IRQs when screen is on (fixes mgba.io/i/912)
 - GBA: Fix some GBA ROM misdetection (fixes mgba.io/i/978)
 - GBA: Fix SharkPort saves for EEPROM games
 - GBA Audio: Increase PSG volume (fixes mgba.io/i/932)
 - GBA BIOS: Fix incorrect exit condition in LZ77
 - GBA Cheats: Fix PARv3 slide codes (fixes mgba.io/i/919)
 - GBA Cheats: Fix slide codes not initializing properly
 - GBA DMA: ROM reads are forced to increment
 - GBA Hardware: RTC accuracy improvements
 - GBA I/O: Fix writing to DISPCNT CGB flag (fixes mgba.io/i/902)
 - GBA Memory: Fix copy-on-write memory leak
 - GBA Memory: Partially revert prefetch changes (fixes mgba.io/i/840)
 - GBA Savedata: Fix crash when resizing flash
 - GBA Video: Force align 256-color tiles
 - GBA Video: OBJWIN can change blend params after OBJ is drawn (fixes mgba.io/i/921)
 - PSP2: Fix issues causing poor audio
 - Python: Fix package directory