@@ -120,6 +120,7 @@ Misc:
  - Wii: Define _GNU_SOURCE (fixes mgba.io/i/1106)
  - Wii: Expose stretch configuration in settings
  - Wii: Stretch now sets pixel-accurate mode size cap
+ - Qt: Ensure camera image is valid
 
 0.7 beta 1: (2018-09-24)
 - Initial beta for 0.7
